--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -90,6 +90,9 @@
 <div th:if="${added}">
     Employee with id <span th:text="${added}"></span> successfully added
 </div>
+<div th:if="${updated}">
+    Employee with id <span th:text="${updated}"></span> successfully updated
+</div>
 
 </body>
 </html>
