--- a/src/main/resources/templates/findPage.html
+++ b/src/main/resources/templates/findPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employees Search</title>
+    <title>Employees By Name and Surname Search:</title>
 
     <link rel="stylesheet" href="/style.css" type="text/css"/>
 </head>
