--- a/src/main/resources/templates/confirmEmployeeEditPage.html
+++ b/src/main/resources/templates/confirmEmployeeEditPage.html
@@ -16,6 +16,7 @@
     <th>Surname</th>
     <th>Id</th>
     <th>Age</th>
+    <th>Email</th>
     <th>Additional Info</th>
   </tr>
   </thead>
@@ -25,6 +26,7 @@
     <td th:text="${editEmployee.surname}"></td>
     <td th:text="${editEmployee.id}"></td>
     <td th:text="${editEmployee.age}"></td>
+    <td th:text="${editEmployee.email}"></td>
     <td th:text="${editEmployee.additionalInfo}"></td>
   </tr>
   </tbody>
