--- a/src/main/resources/templates/editEmployeePage.html
+++ b/src/main/resources/templates/editEmployeePage.html
@@ -34,6 +34,12 @@
       <input type="text" th:field="*{age}">
     </label>
   </div>
+  <div>
+    <label>Email:&nbsp;</label>
+    <label>
+      <input type="text" th:field="*{email}">
+    </label>
+  </div>
   <input type="hidden" th:field="*{additionalInfo}">
   <div>
     <button type="submit">Submit</button>
