--- a/src/main/resources/templates/editEmployeePage2.html
+++ b/src/main/resources/templates/editEmployeePage2.html
@@ -14,6 +14,7 @@
     <input type="hidden" th:field="*{surname}">
     <input type="hidden" th:field="*{id}">
     <input type="hidden" th:field="*{age}">
+    <input type="hidden" th:field="*{email}">
     <div>
     <label>Additional Info:&nbsp;</label>
     <label>
