--- a/src/main/resources/templates/editEmployeePage2.html
+++ b/src/main/resources/templates/editEmployeePage2.html
@@ -15,11 +15,11 @@
     <input type="hidden" th:field="*{id}">
     <input type="hidden" th:field="*{age}">
     <input type="hidden" th:field="*{email}">
-    <div>
-    <label>Additional Info:&nbsp;</label>
-    <label>
-        <textarea th:field="*{additionalInfo}"></textarea>
-    </label>
+    <div class="form-group">
+        <label for="additionalInfo">Additional Info:</label>
+        <textarea class="form-control" type="text" th:field="*{additionalInfo}" id="additionalInfo"
+                  placeholder="Additional Info"></textarea>
+        <div class="error" th:if="${#fields.hasErrors('additionalInfo')}" th:errors="*{additionalInfo}"></div>
     </div>
   <div>
     <button type="submit">Submit</button>
